@@ -1,3 +1,8 @@
+2014-07-25  Khaled Hosny  <khaledhosny@eglug.org>
+
+	* dpxfile.c, dpxfile.h: Use an enum for resource type instead of
+	preprocessor macros (easier to view in a debugger).
+
 2014-07-24  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* cff.c. cff.h, cid.c, cid.h, cid_p.h, cidtype0.c, cidtype2.c,
